// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should add "active" class if favorites button isActive 1`] = `
<button
  className="Button favorites active"
  onClick={[Function]}
  value="Favorites"
>
  Favorites
  <div
    className="favorites-badge"
  >
    2
  </div>
</button>
`;

exports[`Button should add "active" class if isActive 1`] = `
<input
  className="Button people active"
  onClick={[Function]}
  type="button"
  value="People"
/>
`;

exports[`Button should match the snapshot 1`] = `
<input
  className="Button people "
  onClick={[Function]}
  type="button"
  value="People"
/>
`;

exports[`Button should render favorites button 1`] = `
<button
  className="Button favorites "
  onClick={[Function]}
  value="Favorites"
>
  Favorites
  <div
    className="favorites-badge"
  >
    2
  </div>
</button>
`;
